--- a/Parcial3/Ejercicios/Álgebra_Lineal_16.ipynb
+++ b/Parcial3/Ejercicios/Álgebra_Lineal_16.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,24 +15,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "lh7UjxCsiaFx"
+      },
+      "outputs": [],
       "source": [
         "y_0 = np.array([[1,0,0,0], [0,1,0,0], [0,0,-1,0],[0,0,0,-1]])\n",
         "y_1 = np.array([[0,0,0,1], [0,0,1,0], [0,-1,0,0],[-1,0,0,0]])\n",
         "y_2 = np.array([[0,0,0,-1j], [0,0,1j,0], [0,1j,0,0],[-1j,0,0,0]])\n",
         "y_3 = np.array([[0,0,1,0], [0,0,0,-1], [-1,0,0,0],[0,1,0,0]])"
-      ],
-      "metadata": {
-        "id": "lh7UjxCsiaFx"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y=[y_0,y_1,y_2,y_3]\n",
-        "print(y)"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -54,11 +37,10 @@
         "id": "Yl4X2_vgiiem",
         "outputId": "cdeb30b5-d942-49bc-9ad4-c1a009118540"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[array([[ 1,  0,  0,  0],\n",
             "       [ 0,  1,  0,  0],\n",
@@ -75,22 +57,31 @@
             "       [ 0,  1,  0,  0]])]\n"
           ]
         }
+      ],
+      "source": [
+        "y=[y_0,y_1,y_2,y_3]\n",
+        "print(y)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def conmutador(A, B):\n",
-        "    return A @ B + B @ A"
-      ],
+      "execution_count": 12,
       "metadata": {
         "id": "QSUZnygP_VtO"
       },
-      "execution_count": 12,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def conmutador(A, B):\n",
+        "    return A @ B + B @ A"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "tRO-MApeijxD"
+      },
+      "outputs": [],
       "source": [
         "def metrica(A,B):\n",
         "  matriz=np.zeros((4,4))\n",
@@ -99,56 +90,43 @@
         "  matriz[2,2]=-1\n",
         "  matriz[3,3]=-1\n",
         "  return matriz"
-      ],
-      "metadata": {
-        "id": "tRO-MApeijxD"
-      },
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "per = np.array([1, 2, 3,4])\n",
-        "perm = np.array([np.array(x) for x in permutations(per, 2)])"
-      ],
+      "execution_count": 15,
       "metadata": {
         "id": "KfFYx-0tltH5"
       },
-      "execution_count": 15,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "per = np.array([1, 2, 3, 4])\n",
+        "perm = np.array([np.array(x) for x in permutations(per, 2)])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "zeros = np.zeros((4,4))"
-      ],
+      "execution_count": 16,
       "metadata": {
         "id": "O5kwAZVflvbg"
       },
-      "execution_count": 16,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "zeros = np.zeros((4,4))"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Verificación"
-      ],
       "metadata": {
         "id": "Kzk_jxZIlyLw"
-      }
+      },
+      "source": [
+        "Verificación"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for p in perm:\n",
-        "    i, j = p\n",
-        "    if not ((conmutador(y[i-1], y[j-1]) -2*metrica(y[i-1],y[j-1]) *np.identity(4)) == zeros).all:\n",
-        "        print(\"Error\")\n",
-        "        break\n",
-        "    else:\n",
-        "        print(\"OK\")"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,11 +134,10 @@
         "id": "YE9qLL4rlxPi",
         "outputId": "81b2f9a7-dba6-4374-96bf-e1e09f6593fa"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "OK\n",
             "OK\n",
@@ -176,7 +153,30 @@
             "OK\n"
           ]
         }
+      ],
+      "source": [
+        "for p in perm:\n",
+        "    i, j = p\n",
+        "    if not ((conmutador(y[i-1], y[j-1]) -2*metrica(y[i-1],y[j-1]) *np.identity(4)) == zeros).all:\n",
+        "        print(\"Error\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"OK\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
